fix: broken tests and invalid migration